--- a/templates/pages/questionnaire_list.html
+++ b/templates/pages/questionnaire_list.html
@@ -3,7 +3,6 @@
 
 <div class="col-xl-12 col-md-12">
   <div class="card Recent-Users">
-    
     <div class="card-block px-0 py-3">
       <div class="table-responsive">
         <table class="table table-hover">
@@ -14,7 +13,6 @@
             <tr>
               <th>標題</th>
               <th>發布時間</th>
-              <th>截止時間</th>
               <th>動作</th>
               <th class="text-right"></th>
             </tr>
@@ -23,30 +21,39 @@
             {% for questionnaire in questionnaires %}
             <tr class="unread">
               <td>
-                <h6 class="mb-1">{{ questionnaire.title}}</h6>
+                <h6 class="mb-1">{{ questionnaire.title }}</h6>
               </td>
               <td>
                 <h6 class="text-muted"><i class="fas fa-circle text-c-blue f-10 m-r-30"></i>{{ questionnaire.assigned_at }}</h6>
               </td>
               <td>
-                <h6 class="text-muted"><i class="fas fa-circle text-c-red f-10 m-r-30"></i>{{ questionnaire.deadline }}</h6>
-              </td>
-              <td>
-                <a href="{% url 'answer_page' pk=questionnaire.pk %}" class="label theme-bg text-white f-14">Answer</a>
+                <a href="{{ questionnaire.reply_url }}={{ user.user_hash }}" class="label theme-bg text-white f-14">作答</a>
                 {% if user.type == 'ADMIN' %}
-                <a href="{% url 'edit_questionnaire' pk=questionnaire.pk %}" class="label theme-bg2 text-white f-14">Edit</a> <a href="{% url 'delete_questionnaire' pk=questionnaire.pk %}" class="label theme-bg3 text-white f-14">Delete</a>
+                <a href="{{ questionnaire.edit_url }}" target="_blank" class="label theme-bg2 text-white f-14">編輯</a>
+                <a href="{% url 'delete_questionnaire' pk=questionnaire.pk %}" class="label theme-bg3 text-white f-14">刪除</a>
+                <a href="#" data-edit-url="{{ questionnaire.edit_url }}" class="update-response label theme-bg4 text-white f-14">更新回覆</a>
+                <a href="{% url 'answer_list' pk=questionnaire.pk %}" class="label theme-bg4 text-white f-14">查看回覆</a>
                 {% endif %}
               </td>
             </tr>
             {% endfor %}
           </tbody>
-
-          
         </table>
       </div>
     </div>
   </div>
 </div>
 
+<script>
+  document.querySelectorAll('.update-response').forEach(function(link) {
+      link.addEventListener('click', function(e) {
+          e.preventDefault();
+          var editUrl = e.target.getAttribute('data-edit-url');
+          var urlParts = editUrl.split('/');
+          var formId = urlParts[urlParts.length - 2];  // Extract the form ID from the URL
+          window.location.href = `{% url 'update_response' %}?form_id=${formId}`;
+      });
+  });
+</script>
 
 {% endblock content %}
