--- a/templates/pages/profile_edit.html
+++ b/templates/pages/profile_edit.html
@@ -10,11 +10,10 @@
 
 <link href='https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css' rel='stylesheet'></link>
   <!-- [ Main Content ] start -->
-  <div class="row">
     <div class="col-sm">
       <div class="card">
         <div class="card-header">
-          <h3>{{ user.name }}'s Profile</h3>
+          <h3>修改個人資料</h3>
         </div>
         <div class="card-block">
           <div class="row">
@@ -50,9 +49,9 @@
                   <div class="d-flex align-items-left justify-content-left flex-column">
                     <div class="text-left">
                       <div class="w-50 p-3">
-                        <img id="user_uploaded_image" src="{{ MEDIA_URL }}Profile/{{ request.user.username }}/{{ request.user.username }}.jpg" alt="profile image" class="img-fluid" style="box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);" height="200" width="200">
+                        <img src="{{ MEDIA_URL }}Profile/{{ edit_user.username }}/{{ edit_user.username }}.jpg" alt="profile image" class="img-fluid" style="box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);" height="200" width="200">
                     </div>                    
-                      <label class="btn btn-primary ">
+                      <label class="btn btn-secondary">
                         <input id="upload_profile" style="display:none;" type="file" name="upload_profile">
                         <i class="fa fa-photo"></i>更換照片
                       </label>
@@ -65,8 +64,7 @@
           </div>
         </div>
       </div>
-    </div>
-  </div>
+
   <!-- [ Main Content ] end -->
 <script>
   // replace image with user uplaoaded image
