--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -3,8 +3,10 @@
 
 <head>
   {% include 'includes/head.html' %}
-  {% block extrastyle %}{% endblock extrastyle %}
-
+  {% block extrastyle %}
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.13/css/select2.min.css" rel="stylesheet" />
+  {{ block.super }}
+  {% endblock extrastyle %}
 </head>
 <body>
 
@@ -41,7 +43,15 @@
   </div>
 
   {% include 'includes/scripts.html' %}
-  {% block extra_js %}{% endblock extra_js %}
+  {% block extra_js %}
+  {{ block.super }}
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.13/js/select2.min.js"></script>
+  <script>
+    $(document).ready(function() {
+      $('.select2').select2();
+    });
+  </script>
+{% endblock extra_js %}
 
 </body>
 </html>
