--- a/templates/pages/add_questionnaire.html
+++ b/templates/pages/add_questionnaire.html
@@ -1,28 +1,40 @@
 {% extends 'layouts/base.html' %}
+{% load static %}
+
 {% block content %}
-  <div class="row">
+<div class="row">
     <div class="col-sm-12">
-      <div class="card">
         <div class="col-md-12">
-          <h3 class="mb-12">新增問卷</h3>
-          <form method="post" enctype="multipart/form-data" id="questionnaireForm">
-            {% csrf_token %}
-            {{questionnaire_form.as_p }}
-            <div id="question-container">
-              <!-- Reply Button -->
-              {% for questionnaire in questionnaires %}
-              <a href="{{ questionnaire.reply_url }}?usp=pp_url&entry.325964613={{ user.user_hash }}" class="reply-button">Reply to Questionnaire</a>
-              {% endfor %}
+            <form method="post" enctype="multipart/form-data" id="questionnaireForm" class="card-body text-center">
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="form-group">
+                            {% csrf_token %}
+                            <!-- Flexbox container for icon and header -->
+                            <div class="mb-12 d-flex align-items-center justify-content-center">
+                                <i class="feather icon-file-plus auth-icon mr-2"></i>
+                                
+                            </div>
+                            <h3 class="mb-12">新增問卷</h3>
+                            {% for field in questionnaire_form %}
+                                <div class="form-group">
+                                    {{ field }}
+                                    {% if field.errors %}
+                                        <span class="text-danger">{{ field.errors }}</span>
+                                    {% endif %}
+                                </div>
+                            {% endfor %}
+                            <button type="submit" class="btn btn-primary">提交</button>
+                        </div>
+                    </div>
+                </div>
+            </form>
+            <div id="urlError" style="color: red; display: none;">
+                請輸入編輯問卷的網址
             </div>
-            <button type="submit" class="label theme-bg text-white f-14">提交</button>
-          </form>
-          <div id="urlError" style="color: red; display: none;">
-            請輸入編輯問卷的網址
-          </div>
         </div>
-      </div>
     </div>
-  </div>
+</div>
 
   <script>
     document.getElementById("questionnaireForm").addEventListener("submit", function(event) {
