--- a/templates/pages/answer_history.html
+++ b/templates/pages/answer_history.html
@@ -1,7 +1,7 @@
 {% extends 'layouts/base.html' %}
 
 {% block content %}
-<div class="card Response">
+<div class="card Recent-Users">
   <div class="container">
     <div class="card-block px-0 py-3">
       <div class="table-responsive">
@@ -10,7 +10,7 @@
           <table class="table table-hover"> <!-- Added table-hover class here -->
             <thead>
               <tr>
-                <th>#</th> >
+                <th>#</th>
                 <th>Username</th> <!-- Username Column -->
                 {% for key in responses.0.keys %}
                   {% if key != "username" %}
@@ -26,7 +26,13 @@
                   <td>{{ response.username }}</td> <!-- Display username -->
                   {% for key, value in response.items %}
                     {% if key != "username" %}
-                      <td>{{ value }}</td>
+                      <td>
+                        {% if value|slice:":4" == "http" %} <!-- Check if the value is a URL -->
+                          <a href="{{ value }}" target="_blank" class="label theme-bg text-white f-14">前往檔案</a>
+                        {% else %}
+                          {{ value }}
+                        {% endif %}
+                      </td>
                     {% endif %}
                   {% endfor %}
                 </tr>
