--- a/templates/pages/answer_list.html
+++ b/templates/pages/answer_list.html
@@ -1,53 +1,59 @@
 {% extends 'layouts/base.html' %}
 
 {% block content %}
-<div class="card Response">
-<div class="container">
-  <div class="card-block px-0 py-3">
-    <div class="table-responsive">
-    <h2>{{ questionnaire.title }}</h2>
-    {% if answers %}
-        {% for answer in answers %}
+<div class="card Recent-Users">
+  <div class="container">
+    <div class="card-block px-0 py-3">
+      <div class="table-responsive">
+        <h2>{{ questionnaire.title }}</h2>
+        {% if answers %}
+          {% for answer in answers %}
             {% if answer.response_data %}
-                {% for response in answer.response_data %}
-                    {% if forloop.first %} <!-- Check if it's the first response to set up table headers -->
-                        <table class="table table-hover"> <!-- Added table-hover class here -->
-                            <thead>
-                                <tr>
-                                    <th>#</th> <!-- Numbering Column -->
-                                    <th>Username</th> <!-- Username Column -->
-                                    {% for key in response.keys %}
-                                        {% if key != "username" %}
-                                            <th>{{ key }}</th>
-                                        {% endif %}
-                                    {% endfor %}
-                                </tr>
-                            </thead>
-                            <tbody>
-                    {% endif %}
-                    <tr>
-                        <td>{{ forloop.counter }}</td> <!-- Display row number -->
-                        <td>{{ response.username }}</td> <!-- Display username -->
-                        {% for key, value in response.items %}
-                            {% if key != "username" %}
-                                <td>{{ value }}</td>
-                            {% endif %}
+              {% for response in answer.response_data %}
+                {% if forloop.first %}
+                  <table class="table table-hover">
+                    <thead>
+                      <tr>
+                        <th>#</th>
+                        <th>Username</th>
+                        {% for key in response.keys %}
+                          {% if key != "username" %}
+                            <th>{{ key }}</th>
+                          {% endif %}
                         {% endfor %}
-                    </tr>
-                    {% if forloop.last %}
-                            </tbody>
-                        </table>
+                      </tr>
+                    </thead>
+                    <tbody>
+                {% endif %}
+                <tr>
+                  <td>{{ forloop.counter }}</td>
+                  <td>{{ response.username }}</td>
+                  {% for key, value in response.items %}
+                    {% if key != "username" %}
+                      <td>
+                        {% if value|slice:":4" == "http" %} <!-- Check if the value is a URL -->
+                          <a href="{{ value }}" target="_blank" class="label theme-bg text-white f-14">前往檔案</a>
+                        {% else %}
+                          {{ value }}
+                        {% endif %}
+                      </td>
                     {% endif %}
-                {% endfor %}
+                  {% endfor %}
+                </tr>
+                {% if forloop.last %}
+                    </tbody>
+                  </table>
+                {% endif %}
+              {% endfor %}
             {% else %}
-                <p>No responses found for this answer.</p>
+              <p>No responses found for this answer.</p>
             {% endif %}
-        {% empty %}
+          {% empty %}
             <p>No answers found for this questionnaire.</p>
-        {% endfor %}
-    {% else %}
-        <p>No answers available.</p>
-    {% endif %}
+          {% endfor %}
+        {% else %}
+          <p>No answers available.</p>
+        {% endif %}
       </div>
     </div>
   </div>
