--- a/templates/pages/profile.html
+++ b/templates/pages/profile.html
@@ -43,16 +43,16 @@
       </div>
     </div>
   </div>
-  <div class="card">
+  <div class="card Recent-Users">
     <div class="card-header">
-        <h3>{{ user.name }}'s Questionnaire Responses</h3>
+        <h3>{{ user.name }}的作答記錄</h3>
     </div>
     <div class="card-body">
         <table class="table table-hover">
             <thead>
                 <tr>
-                    <th>Questionnaire Title</th>
-                    <th>Action</th>
+                    <th>問卷標題</th>
+                    <th>動作</th>
                 </tr>
             </thead>
             <tbody>
@@ -60,7 +60,7 @@
                 <tr>
                     <td>{{ answer.questionnaire.title }}</td>
                     <td>
-                      <a href="{% url 'answer_history' pk=answer.questionnaire.pk username=user.username %}"  class="btn btn-primary mt-3">View History</a>
+                      <a href="{% url 'answer_history' pk=answer.questionnaire.pk username=user.username %}"  class="label theme-bg text-white f-14">查看作答內容</a>
                     </td>
                 </tr>
                 {% empty %}
