--- a/templates/pages/questionnaire_list.html
+++ b/templates/pages/questionnaire_list.html
@@ -7,7 +7,7 @@
       <div class="table-responsive">
         <table class="table table-hover">
           <div class="card-header">
-            <h5>List of Questionnaires</h5>
+            <h3>問卷列表</h3>
           </div>
           <thead>
             <tr>
