更新User資料欄位

--- a/templates/pages/profile.html
+++ b/templates/pages/profile.html
@@ -35,6 +35,8 @@
               <p><strong>身份:</strong> {{ user.get_type_display }}</p>
               <p><strong>性別:</strong> {{ user.get_sex_display }}</p>
               <p><strong>生日:</strong> {{ user.birthday }}</p>
+              <p><strong>Nano Guid:</strong> {{ user.nano_guid }}</p>
+              <p><strong>序列號碼:</strong> {{ user.serial_number }}</p>
               <p><strong>聯絡電話:</strong> {{ user.phone_num }}</p>
               <p><strong>住址:</strong> {{ user.address }}</p>
             </div>
